fix header alignment

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -13,7 +13,7 @@
   background: papayawhip;
   display:flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 
 }
 
@@ -24,7 +24,7 @@
   background: white;
   padding: 4px 32px;
   margin: 8px;
-}
+  }
 
 ul {
   /* this removes the dots on the list items*/
